@startuml

interface Poptional{
    <B>static Poptional<T> ofNullable(T t)
}
abstract class Something
abstract class Nothing
interface FooNullObj{
    <B>static FooNullObj ofNullable(Foo foo)
    String getFirstName()
    String getLastName()
}
class Foo {
    String getFirstName()
        String getLastName()
}
class NullFoo {
    String getFirstName()
    String getLastName()
}

Poptional <|-- Something
Poptional <|-- Nothing
Poptional <|-- FooNullObj
FooNullObj <|-- Foo
Something <|-- Foo
FooNullObj <|-- NullFoo
Nothing <|-- NullFoo
Client -> Poptional: ofNullable
Client -> FooNullObj: ofNullable
@enduml